# Smart-Intonation

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeCache.txt  CMakeLists.txt  Makefile  Smarto  cmake_install.cmake  fft  fft.h  main.cpp  window.cpp  window.h
src/Smarto_autogen/: moc_predefs.h  mocs_compilation.cpp
src/Smarto_autogen/EWIEGA46WW/: moc_window.cpp
